@@ -79,7 +79,15 @@ class NavtreeStrategy(SitemapNavtreeStrategy):
 
         self.context = context
         self.widget = widget
-        self.showAllParents = True # override from base class
+
+        # set rootPath to the query path if the source query is not a navtree query
+        # in this case we want the widget to only show elements below the query path
+        if 'path' in widget.source.navigation_tree_query:
+            queryPath = widget.source.navigation_tree_query['path']
+            if 'navtree' not in queryPath or not queryPath['navtree']:
+                self.rootPath = queryPath['query']
+
+        self.showAllParents = False # override from base class
         self.site_encoding = utils.getSiteEncoding(self.context)
 
     def subtreeFilter(self, node):
